// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the whole document, pinned (characterization) > every section together - nothing declared 1`] = `
"# TITLE - 28 juillet 2026

## SUMMARY

| INDICATOR | VALUE |
|---|---|
| NETWORTHAFTERTAX | **1 430 €** |
| GROSS | 2 000 € |
| DEBTS | 0 € |
| TAXES | 570 € |
| NETWORTH | 2 000 € |
| INVESTEDRATE | 100% |
| GOAL - Patrimoine | GOALFMT:500 000 €:0 |
| GOALREMAINING - Patrimoine | 498 570 € |

## ALLOCATION

| CATEGORY | VALUE | PCT |
|---|---|---|
| Investissements | 2 000 € | 100% |

## PERFORMANCE

| COLACCOUNT | COLVALUE | COLINVESTED | COLGROSSGAIN | COLTAX | COLPERF |
|---|---|---|---|---|---|
| CTO (CTO) | 2 000 € | 100 € | +1 900 € | -570 € | +1900.0% |

SUMMARYLINE:{"invested":"100 €","value":"2 000 €","gain":"+1 900 €","netGain":"+1 330 €","perf":"+1900.0","cagr":"CAGRSUFFIX:+220.5"}

## PASSIVE

PASSIVELINE:{"annual":"7 €","monthly":"1 €","dividends":"10 €","interest":"0 €"}

| COLASSET | COLENVELOPE | COLYIELD | COLANNUALGROSS | COLANNUALNET | COLEXDIV |
|---|---|---|---|---|---|
| Apple | CTO | 0.50% | 10 € | 7 € | - |

## REALINCOME

| INDICATOR | VALUE |
|---|---|
| YTDDIVIDENDS | 90 € |
| YTDINTEREST | 0 € |
| YTDTOTAL | **90 €** |

## BENCHMARK

| INDICATOR | CAGR |
|---|---|
| YOURPORTFOLIO | **+220.5%** |
| MSCIWORLD | +7.3% |

## RADAR

| INDICATOR | VALUE |
|---|---|
| SAFEVSRISKY | SAFE 0 € (0%) · RISKY 2 000 € (100%) |

## TOPASSETS

| COLASSET | CATEGORY | COLVALUE | COLGAIN | COLTAX | PCT |
|---|---|---|---|---|---|
| CTO (CTO) | Titres | 2 000 € | +1 900 € | -570 € | 100% |
"
`;

exports[`the whole document, pinned (characterization) > every section together - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## SUMMARY

| INDICATOR | VALUE |
|---|---|
| NETWORTHAFTERTAX | **10 667 €** |
| GROSS | 344 384 € |
| DEBTS | 332 337 € |
| TAXES | 1 379 € |
| NETWORTH | 12 047 € |
| INVESTEDRATE | 4% |
| SAVINGSRATE | +28.1% |
| SALARY | 3 200 € |
| MONTHLYSAVED | 900 € |
| RUNWAY | 9 MONTHS |
| SAVINGSAVAILABLE | 18 000 € |
| MONTHLYEXPENSES | 1 850 € |
| GOAL - Patrimoine | GOALFMT:500 000 €:2 |
| GOALREMAINING - Patrimoine | 489 333 € |
| GOAL - Fonds d'urgence | GOALFMT:20 000 €:75 |
| GOALREMAINING - Fonds d'urgence | 5 000 € |

## ALLOCATION

| CATEGORY | VALUE | PCT |
|---|---|---|
| realEstate | 120 000 € | 73% |
| savings | 18 000 € | 11% |
| auto | 9 500 € | 6% |
| crypto | 9 000 € | 5% |
| Investissements | 5 538 € | 3% |
| cash | 2 346 € | 1% |

## PERFORMANCE

| COLACCOUNT | COLVALUE | COLINVESTED | COLGROSSGAIN | COLTAX | COLPERF |
|---|---|---|---|---|---|
| PEA (PEA) | 2 235 € | 1 000 € | +235 € | -44 € | +23.4% |
| CTO (CTO) | 3 304 € | 3 050 € | +254 € | -80 € | +8.3% |

SUMMARYLINE:{"invested":"4 050 €","value":"5 538 €","gain":"+488 €","netGain":"+365 €","perf":"+12.0","cagr":"CAGRSUFFIX:+10.1"}

## PASSIVE

PASSIVELINE:{"annual":"279 €","monthly":"23 €","dividends":"36 €","interest":"255 €"}

> MISSINGRATES:1

WEIGHTEDRATE:1.70

YEAREND:246 €

| COLASSET | COLENVELOPE | COLYIELD | COLANNUALGROSS | COLANNUALNET | COLEXDIV |
|---|---|---|---|---|---|
| Ferrari | CTO | 0.71% | 6 € | 4 € | 22 avr. 2026 |
| Apple | CTO | 0.44% | 2 € | 1 € | 10 août 2026 |
| Meta | CTO | 0.39% | 3 € | 2 € | 14 déc. 2026 |
| Air Liquide | CTO | 2.00% | 25 € | 17 € | - |

## REALINCOME

| INDICATOR | VALUE |
|---|---|
| YTDDIVIDENDS | 1 € |
| YTDINTEREST | 88 € |
| YTDTOTAL | **89 €** |

## BENCHMARK

| INDICATOR | CAGR |
|---|---|
| YOURPORTFOLIO | **+10.1%** |
| MSCIWORLD | +11.2% |
| SP500 | +7.7% |
| CAC40 | +5.4% |

## RADAR

| INDICATOR | VALUE |
|---|---|
| SAFEVSRISKY | SAFE 20 346 € (58%) · RISKY 14 538 € (42%) |

## TOPASSETS

| COLASSET | CATEGORY | COLVALUE | COLGAIN | COLTAX | PCT |
|---|---|---|---|---|---|
| Appartement | REAL_ESTATE | 300 000 € | - | - | 87% |
| Livret A | SAVINGS | 15 000 € | - | - | 4% |
| Voiture | AUTOMOBILE | 9 500 € | - | - | 3% |
| Crypto | CRYPTO | 9 000 € | +4 000 € | -1 256 € | 3% |
| CTO (CTO) | Titres | 3 304 € | +254 € | -80 € | 1% |
| LEP | SAVINGS | 3 000 € | - | - | 1% |
| Courant | CHECKING | 2 346 € | - | - | 1% |
| PEA (PEA) | Titres | 2 235 € | +235 € | -44 € | 1% |

## FINANCING

| INDICATOR | VALUE |
|---|---|
| TOTALLIABILITIES | 332 337 € |
| DEBTRATIO | 97% |
| EQUITY | 12 047 € |

| COLASSET | COLVALUE | COLLOAN | COLEQUITY | COLLTV |
|---|---|---|---|---|
| Appartement | 300 000 € | 180 000 € | 120 000 € | 60% |

## HISTORY

| COLMONTH | COLNETWORTH | COLCHANGE | PCT |
|---|---|---|---|
| mai 26 | 16 000 € | - | - |
| juin 26 | 16 500 € | +500 € | +3.1% |
| juil. 26 | 17 346 € | +846 € | +5.1% |
"
`;

exports[`the whole document, pinned (characterization) > every section together - small portfolio 1`] = `
"# TITLE - 28 juillet 2026

## SUMMARY

| INDICATOR | VALUE |
|---|---|
| NETWORTHAFTERTAX | **1 430 €** |
| GROSS | 2 000 € |
| DEBTS | 0 € |
| TAXES | 570 € |
| NETWORTH | 2 000 € |
| INVESTEDRATE | 100% |
| SAVINGSRATE | +16.7% |
| SALARY | 3 000 € |
| MONTHLYSAVED | 500 € |
| RUNWAY | 0 MONTHS |
| SAVINGSAVAILABLE | 0 € |
| MONTHLYEXPENSES | 1 500 € |
| GOAL - Patrimoine | GOALFMT:500 000 €:0 |
| GOALREMAINING - Patrimoine | 498 570 € |

## ALLOCATION

| CATEGORY | VALUE | PCT |
|---|---|---|
| Investissements | 2 000 € | 100% |

## PERFORMANCE

| COLACCOUNT | COLVALUE | COLINVESTED | COLGROSSGAIN | COLTAX | COLPERF |
|---|---|---|---|---|---|
| CTO (CTO) | 2 000 € | 100 € | +1 900 € | -570 € | +1900.0% |

SUMMARYLINE:{"invested":"100 €","value":"2 000 €","gain":"+1 900 €","netGain":"+1 330 €","perf":"+1900.0","cagr":"CAGRSUFFIX:+220.5"}

## PASSIVE

PASSIVELINE:{"annual":"7 €","monthly":"1 €","dividends":"10 €","interest":"0 €"}

| COLASSET | COLENVELOPE | COLYIELD | COLANNUALGROSS | COLANNUALNET | COLEXDIV |
|---|---|---|---|---|---|
| Apple | CTO | 0.50% | 10 € | 7 € | - |

## REALINCOME

| INDICATOR | VALUE |
|---|---|
| YTDDIVIDENDS | 90 € |
| YTDINTEREST | 0 € |
| YTDTOTAL | **90 €** |

## BENCHMARK

| INDICATOR | CAGR |
|---|---|
| YOURPORTFOLIO | **+220.5%** |
| MSCIWORLD | +7.3% |

## RADAR

| INDICATOR | VALUE |
|---|---|
| SAFEVSRISKY | SAFE 0 € (0%) · RISKY 2 000 € (100%) |

## TOPASSETS

| COLASSET | CATEGORY | COLVALUE | COLGAIN | COLTAX | PCT |
|---|---|---|---|---|---|
| CTO (CTO) | Titres | 2 000 € | +1 900 € | -570 € | 100% |
"
`;

exports[`the whole document, pinned (characterization) > section allocation on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## ALLOCATION

| CATEGORY | VALUE | PCT |
|---|---|---|
| realEstate | 120 000 € | 73% |
| savings | 18 000 € | 11% |
| auto | 9 500 € | 6% |
| crypto | 9 000 € | 5% |
| Investissements | 5 538 € | 3% |
| cash | 2 346 € | 1% |
"
`;

exports[`the whole document, pinned (characterization) > section benchmark on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## BENCHMARK

| INDICATOR | CAGR |
|---|---|
| YOURPORTFOLIO | **+10.1%** |
| MSCIWORLD | +11.2% |
| SP500 | +7.7% |
| CAC40 | +5.4% |
"
`;

exports[`the whole document, pinned (characterization) > section dividendes on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## PASSIVE

PASSIVELINE:{"annual":"279 €","monthly":"23 €","dividends":"36 €","interest":"255 €"}

> MISSINGRATES:1

WEIGHTEDRATE:1.70

YEAREND:246 €

| COLASSET | COLENVELOPE | COLYIELD | COLANNUALGROSS | COLANNUALNET | COLEXDIV |
|---|---|---|---|---|---|
| Ferrari | CTO | 0.71% | 6 € | 4 € | 22 avr. 2026 |
| Apple | CTO | 0.44% | 2 € | 1 € | 10 août 2026 |
| Meta | CTO | 0.39% | 3 € | 2 € | 14 déc. 2026 |
| Air Liquide | CTO | 2.00% | 25 € | 17 € | - |
"
`;

exports[`the whole document, pinned (characterization) > section financement on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## FINANCING

| INDICATOR | VALUE |
|---|---|
| TOTALLIABILITIES | 332 337 € |
| DEBTRATIO | 97% |
| EQUITY | 12 047 € |

| COLASSET | COLVALUE | COLLOAN | COLEQUITY | COLLTV |
|---|---|---|---|---|
| Appartement | 300 000 € | 180 000 € | 120 000 € | 60% |
"
`;

exports[`the whole document, pinned (characterization) > section historique on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## HISTORY

| COLMONTH | COLNETWORTH | COLCHANGE | PCT |
|---|---|---|---|
| mai 26 | 16 000 € | - | - |
| juin 26 | 16 500 € | +500 € | +3.1% |
| juil. 26 | 17 346 € | +846 € | +5.1% |
"
`;

exports[`the whole document, pinned (characterization) > section performance on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## PERFORMANCE

| COLACCOUNT | COLVALUE | COLINVESTED | COLGROSSGAIN | COLTAX | COLPERF |
|---|---|---|---|---|---|
| PEA (PEA) | 2 235 € | 1 000 € | +235 € | -44 € | +23.4% |
| CTO (CTO) | 3 304 € | 3 050 € | +254 € | -80 € | +8.3% |

SUMMARYLINE:{"invested":"4 050 €","value":"5 538 €","gain":"+488 €","netGain":"+365 €","perf":"+12.0","cagr":"CAGRSUFFIX:+10.1"}
"
`;

exports[`the whole document, pinned (characterization) > section radar on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## RADAR

| INDICATOR | VALUE |
|---|---|
| SAFEVSRISKY | SAFE 20 346 € (58%) · RISKY 14 538 € (42%) |
"
`;

exports[`the whole document, pinned (characterization) > section resume on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## SUMMARY

| INDICATOR | VALUE |
|---|---|
| NETWORTHAFTERTAX | **10 667 €** |
| GROSS | 344 384 € |
| DEBTS | 332 337 € |
| TAXES | 1 379 € |
| NETWORTH | 12 047 € |
| INVESTEDRATE | 4% |
| SAVINGSRATE | +28.1% |
| SALARY | 3 200 € |
| MONTHLYSAVED | 900 € |
| RUNWAY | 9 MONTHS |
| SAVINGSAVAILABLE | 18 000 € |
| MONTHLYEXPENSES | 1 850 € |
| GOAL - Patrimoine | GOALFMT:500 000 €:2 |
| GOALREMAINING - Patrimoine | 489 333 € |
| GOAL - Fonds d'urgence | GOALFMT:20 000 €:75 |
| GOALREMAINING - Fonds d'urgence | 5 000 € |
"
`;

exports[`the whole document, pinned (characterization) > section revenusReels on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## REALINCOME

| INDICATOR | VALUE |
|---|---|
| YTDDIVIDENDS | 1 € |
| YTDINTEREST | 88 € |
| YTDTOTAL | **89 €** |
"
`;

exports[`the whole document, pinned (characterization) > section topActifs on its own - rich portfolio 1`] = `
"# TITLE - 28 juillet 2026

## TOPASSETS

| COLASSET | CATEGORY | COLVALUE | COLGAIN | COLTAX | PCT |
|---|---|---|---|---|---|
| Appartement | REAL_ESTATE | 300 000 € | - | - | 87% |
| Livret A | SAVINGS | 15 000 € | - | - | 4% |
| Voiture | AUTOMOBILE | 9 500 € | - | - | 3% |
| Crypto | CRYPTO | 9 000 € | +4 000 € | -1 256 € | 3% |
| CTO (CTO) | Titres | 3 304 € | +254 € | -80 € | 1% |
| LEP | SAVINGS | 3 000 € | - | - | 1% |
| Courant | CHECKING | 2 346 € | - | - | 1% |
| PEA (PEA) | Titres | 2 235 € | +235 € | -44 € | 1% |
"
`;
